update examples, bump version

--- a/examples/boilerplate/package.json
+++ b/examples/boilerplate/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flare-example-boilerplate",
   "author": "@exactchange",
-  "description": "A boilerplate Flare front-end",
+  "description": "A boilerplate front-end using Flare",
   "version": "0.0.1",
   "scripts": {
     "test": "node test"
